@@ -2,6 +2,9 @@ SubVersion: $Id$
 
 Log:
 
+- 20/02/2006, version 0.0.6: roms
+	- error message is a glib allocated string for now
+
 - 08/02/2006, version 0.0.5: roms
 	- changed information message in check_for_libusb according to bug #1372369.
 
